refactor: topic model tools

--- a/book/lectures/nlp_intro/topic/tomotopy.ipynb
+++ b/book/lectures/nlp_intro/topic/tomotopy.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# Lab: Topic Modeling Tools - Tomotopy\n",
+    "# Topic Modeling Tools - Tomotopy\n",
     "\n",
     "[![tomoto](figs/tomoto.png)](https://github.com/bab2min/tomotopy)\n",
     "\n",
@@ -441,7 +441,7 @@
     "print(\"environment variables:\")\n",
     "eKonf.print(eKonf.env().dict())\n",
     "\n",
-    "data_dir = \"../data/topic_models\"\n"
+    "data_dir = \"../data/topic_models\""
    ]
   },
   {
@@ -493,7 +493,7 @@
     "cfg.sampling.sample_size_per_group = 0.1\n",
     "cfg.sampling.output_dir = data_dir\n",
     "cfg.sampling.output_file = \"us_equities_news_sampled.parquet\"\n",
-    "data = eKonf.instantiate(cfg)"
+    "data = eKonf.instantiate(cfg)\n"
    ]
   },
   {
@@ -531,7 +531,7 @@
     "cfg = eKonf.compose(\"path\")\n",
     "cfg.cache.uri = \"https://github.com/entelecheia/ekorpkit-book/raw/main/assets/data/us_equities_news_sampled.zip\"\n",
     "data = eKonf.load_data(\"us_equities_news_sampled.parquet\", cfg.cached_path)\n",
-    "data.text[0]"
+    "data.text[0]\n"
    ]
   },
   {
@@ -608,7 +608,7 @@
     "    mdl.train(10)\n",
     "    print(\"Iteration: {}\\tLog-likelihood: {}\".format(i, mdl.ll_per_word))\n",
     "\n",
-    "mdl.save(save_path, full=True)"
+    "mdl.save(save_path, full=True)\n"
    ]
   },
   {
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "mdl.summary()\n"
+    "mdl.summary()"
    ]
   },
   {
@@ -933,7 +933,7 @@
     "for k in range(mdl.k):\n",
     "    print(\"Topic #{}\".format(k))\n",
     "    for word, prob in mdl.get_topic_words(k):\n",
-    "        print(\"\\t\", word, prob, sep=\"\\t\")"
+    "        print(\"\\t\", word, prob, sep=\"\\t\")\n"
    ]
   },
   {
@@ -964,7 +964,7 @@
     "import re\n",
     "import numpy as np\n",
     "import pyLDAvis\n",
-    "from nltk.corpus import stopwords\n"
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -985,7 +985,7 @@
     "corpus.process(d.lower() for d in data[\"text\"][:100])\n",
     "# save preprocessed corpus for reuse\n",
     "save_path = eKonf.join_path(data_dir, \"preprocessed_corpus.cps\")\n",
-    "corpus.save(save_path)"
+    "corpus.save(save_path)\n"
    ]
   },
   {
@@ -1017,7 +1017,7 @@
     "        len(mdl.docs), len(mdl.used_vocabs), mdl.num_words\n",
     "    )\n",
     ")\n",
-    "print(\"Removed Top words: \", *mdl.removed_top_words)"
+    "print(\"Removed Top words: \", *mdl.removed_top_words)\n"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
     "    mdl.train(10)\n",
     "print(\"Iteration: {:04}, LL per word: {:.4}\".format(1000, mdl.ll_per_word))\n",
     "\n",
-    "mdl.summary()"
+    "mdl.summary()\n"
    ]
   },
   {
@@ -1167,7 +1167,7 @@
     "    term_frequency,\n",
     "    start_index=0,  # tomotopy starts topic ids with 0, pyLDAvis with 1\n",
     "    sort_topics=False,  # IMPORTANT: otherwise the topic_ids between pyLDAvis and tomotopy are not matching!\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -1239,7 +1239,7 @@
     }
    ],
    "source": [
-    "pyLDAvis.display(prepared_data)\n"
+    "pyLDAvis.display(prepared_data)"
    ]
   },
   {
@@ -1257,7 +1257,7 @@
     "save_dir = \"../../../assets/extra\"\n",
     "filename = \"lda_basic.html\"\n",
     "save_path = eKonf.join_path(save_dir, filename)\n",
-    "pyLDAvis.save_html(prepared_data, save_path)\n"
+    "pyLDAvis.save_html(prepared_data, save_path)"
    ]
   },
   {
@@ -1282,7 +1282,7 @@
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
-    "display(HTML(f\"<a href={save_path} target='_blank'>{filename}</a>\"))\n"
+    "display(HTML(f\"<a href={save_path} target='_blank'>{filename}</a>\"))"
    ]
   },
   {
@@ -1342,7 +1342,7 @@
     "    coherence_per_topic = [coh.get_score(topic_id=k) for k in range(mdl.k)]\n",
     "    print(\"==== Coherence : {} ====\".format(preset))\n",
     "    print(\"Average:\", average_coherence, \"\\nPer Topic:\", coherence_per_topic)\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
@@ -1940,7 +1940,7 @@
     "    coherence_per_topic = [coh.get_score(topic_id=k) for k in range(mdl.k)]\n",
     "    print(\"==== Coherence : {}, {}, {} =S===\".format(repr(seg), repr(cm), repr(im)))\n",
     "    print(\"Average:\", average_coherence, \"\\nPer Topic:\", coherence_per_topic)\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
@@ -2008,7 +2008,7 @@
     "print(\"Removed top words:\", mdl.removed_top_words)\n",
     "for i in range(0, 100, 10):\n",
     "    mdl.train(10)\n",
-    "    print(\"Iteration: {}\\tLog-likelihood: {}\".format(i, mdl.ll_per_word))"
+    "    print(\"Iteration: {}\\tLog-likelihood: {}\".format(i, mdl.ll_per_word))\n"
    ]
   },
   {
@@ -2088,7 +2088,7 @@
     }
    ],
    "source": [
-    "mdl.summary()\n"
+    "mdl.summary()"
    ]
   },
   {
@@ -2356,7 +2356,7 @@
     "    print(\"== Topic #{} ==\".format(k))\n",
     "    for word, prob in mdl.get_topic_words(k, top_n=10):\n",
     "        print(word, prob, sep=\"\\t\")\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
