--- a/_sources/lectures/nlp_intro/topic/coherence-practice.ipynb
+++ b/_sources/lectures/nlp_intro/topic/coherence-practice.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "## Topic Coherence in Practice\n",
+    "# Topic Coherence in Practice\n",
     "\n",
     "Let's evaluate some topics using the dataset `20newsgroups` as a reference corpus.\n"
    ]
@@ -54,7 +54,7 @@
     "tokenizer = lambda s: re.findall(\"\\w+\", s.lower())\n",
     "texts = [tokenizer(t) for t in texts]\n",
     "stopwords = set(stopwords.words(\"english\"))\n",
-    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]"
+    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]\n"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "finder = BigramCollocationFinder.from_words(sum(texts[:100], []))\n",
     "bgm = BigramAssocMeasures()\n",
     "score = bgm.mi_like\n",
-    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}"
+    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}\n"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "    sorted(collocations.items(), key=lambda x: x[1], reverse=True),\n",
     "    columns=[\"bigram\", \"score\"],\n",
     ")\n",
-    "collocations.head(10)\n"
+    "collocations.head(10)"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "# Coherence model\n",
     "cm = CoherenceModel(topics=topics, texts=texts, coherence=\"c_v\", dictionary=word2id)\n",
     "\n",
-    "coherence_per_topic = cm.get_coherence_per_topic()"
+    "coherence_per_topic = cm.get_coherence_per_topic()\n"
    ]
   },
   {
@@ -239,7 +239,7 @@
     "data_topic_score = pd.DataFrame(\n",
     "    data=zip(topics_str, coherence_per_topic), columns=[\"Topic\", \"Coherence\"]\n",
     ")\n",
-    "data_topic_score = data_topic_score.set_index(\"Topic\")\n"
+    "data_topic_score = data_topic_score.set_index(\"Topic\")"
    ]
   },
   {
@@ -285,7 +285,7 @@
     "plt.yticks(rotation=0)\n",
     "ax.set_xlabel(\"\")\n",
     "ax.set_ylabel(\"\")\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   }
  ],
