docs: update topic coherence practice

--- a/book/lectures/nlp_intro/topic/coherence-practice.ipynb
+++ b/book/lectures/nlp_intro/topic/coherence-practice.ipynb
@@ -66,7 +66,7 @@
     "tokenizer = lambda s: re.findall(\"\\w+\", s.lower())\n",
     "texts = [tokenizer(t) for t in texts]\n",
     "stopwords = set(stopwords.words(\"english\"))\n",
-    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]\n"
+    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "finder = BigramCollocationFinder.from_words(sum(texts[:100], []))\n",
     "bgm = BigramAssocMeasures()\n",
     "score = bgm.mi_like\n",
-    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}\n"
+    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "    sorted(collocations.items(), key=lambda x: x[1], reverse=True),\n",
     "    columns=[\"bigram\", \"score\"],\n",
     ")\n",
-    "collocations.head(10)\n"
+    "collocations.head(10)"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "source": [
     "## Computing Coherence Scores\n",
     "\n",
-    "Next, we create some random topics and a dictionary with the vocabulary of the texts. We instantiate the CoherenceModel with the topics, texts, and dictionary, specifying the coherence measure as \"c_v\". We compute the coherence scores for each topic and prepare the data for visualization.\n"
+    "Next, we create some random topics and a dictionary with the vocabulary of the texts. We instantiate the CoherenceModel with the topics, texts, and dictionary, specifying the coherence measures. We compute the coherence scores for each topic and prepare the data for visualization.\n"
    ]
   },
   {
@@ -270,7 +270,7 @@
     ")\n",
     "\n",
     "# Compute coherence scores per topic\n",
-    "coherence_per_topic_umass = cm_umass.get_coherence_per_topic()"
+    "coherence_per_topic_umass = cm_umass.get_coherence_per_topic()\n"
    ]
   },
   {
@@ -429,7 +429,7 @@
     "        + [\"u_mass\"] * len(topics),\n",
     "    }\n",
     ")\n",
-    "all_coherence_scores"
+    "all_coherence_scores\n"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "# Add a y-label to the leftmost subplot\n",
     "axes[0].set_ylabel(\"Coherence Score\")\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
