docs: update topic coherence practice

--- a/book/lectures/nlp_intro/topic/coherence-practice.ipynb
+++ b/book/lectures/nlp_intro/topic/coherence-practice.ipynb
@@ -66,7 +66,7 @@
     "tokenizer = lambda s: re.findall(\"\\w+\", s.lower())\n",
     "texts = [tokenizer(t) for t in texts]\n",
     "stopwords = set(stopwords.words(\"english\"))\n",
-    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]"
+    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]\n"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "finder = BigramCollocationFinder.from_words(sum(texts[:100], []))\n",
     "bgm = BigramAssocMeasures()\n",
     "score = bgm.mi_like\n",
-    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}"
+    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}\n"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "    sorted(collocations.items(), key=lambda x: x[1], reverse=True),\n",
     "    columns=[\"bigram\", \"score\"],\n",
     ")\n",
-    "collocations.head(10)"
+    "collocations.head(10)\n"
    ]
   },
   {
@@ -270,18 +270,7 @@
     ")\n",
     "\n",
     "# Compute coherence scores per topic\n",
-    "coherence_per_topic_umass = cm_umass.get_coherence_per_topic()\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "5588f4ef",
-   "metadata": {},
-   "source": [
-    "## Visualizing the Coherence Scores\n",
-    "\n",
-    "Finally, we visualize the coherence scores in a heatmap. Each row represents a topic, and the color intensity indicates the coherence score. The darker the color, the higher the coherence score. This provides an easy way to visually compare the coherence of different topics.\n"
+    "coherence_per_topic_umass = cm_umass.get_coherence_per_topic()"
    ]
   },
   {
@@ -429,7 +418,7 @@
     "        + [\"u_mass\"] * len(topics),\n",
     "    }\n",
     ")\n",
-    "all_coherence_scores\n"
+    "all_coherence_scores"
    ]
   },
   {
@@ -472,6 +461,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8b7518d4",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Coherence Scores\n",
+    "\n",
+    "Finally, we visualize the coherence scores.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "ebad1004",
@@ -511,7 +511,7 @@
     "# Add a y-label to the leftmost subplot\n",
     "axes[0].set_ylabel(\"Coherence Score\")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
