chore(rename): Move BERT-related files to transformers folder

--- a/book/lectures/nlp_deep/transformers/index.ipynb
+++ b/book/lectures/nlp_deep/transformers/index.ipynb
@@ -725,6 +725,19 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "f441f18b",
+   "metadata": {},
+   "source": [
+    "## Next\n",
+    "\n",
+    "```{tableofcontents}\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "24d28a1a",
    "metadata": {
     "slideshow": {
